# vortex-pipeline-detection

./: .clangformat  .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  codecov.yml  install.sh  requirements.sh  ruff.toml
.devcontainer/: devcontainer.json
.github/workflows/: code-coverage.yml  industrial_ci.yml  semrel.yml
docker/: Dockerfile  build.sh  run.sh
irls_line_fitter_2x/: CMakeLists.txt  package.xml
irls_line_fitter_2x/launch/: irls_line.launch.py
irls_line_fitter_2x/src/: irls_line_node.cpp
irls_line_fitter_cpp/: CMakeLists.txt  package.xml
irls_line_fitter_cpp/launch/: irls_line.launch.py
irls_line_fitter_cpp/src/: irls_line_node.cpp
pipeline-detection/: CMakeLists.txt  package.xml
pipeline-detection/include/ros_linefitting/: linedetectorPipe.h  randsac.h
pipeline-detection/src/: debugreciver.cpp  linedetectorPipe.cpp  linefitting.cpp  randsac.cpp
pipeline-filtering/: CMakeLists.txt  README.md  package.xml
pipeline-filtering/config/: pipeline_filtering_params.yaml
pipeline-filtering/include/pipeline_filters/: pipeline_filtering_ros.hpp  pipeline_processing.hpp
pipeline-filtering/launch/: pipeline_filtering.launch.py  pipeline_filtering_launch.py
pipeline-filtering/params/: pipeline_filtering_params.yaml
pipeline-filtering/src/: pipeline_filtering_ros.cpp  pipeline_processing.cpp
pipeline-filtering/test/: CMakeLists.txt
pipeline-line-fitting/: CMakeLists.txt  README.md  package.xml
pipeline-line-fitting/config/: pipeline_line_fitting_params.yaml
pipeline-line-fitting/include/pipeline_line_fitting/: linedetectorPipe.hpp  pipeline_line_fitting_ros.hpp  randsac.hpp
pipeline-line-fitting/include/ros_linefitting/: linedetectorPipe.h
pipeline-line-fitting/launch/: pipeline_line_fitting.launch.py
pipeline-line-fitting/params/: pipeline_line_fitting_params.yaml
pipeline-line-fitting/src/: linedetectorPipe.cpp  pipeline_line_fitting_ros.cpp  randsac.cpp
pipeline_follower_sim/: CMakeLists.txt  package.xml
pipeline_follower_sim/launch/: pipeline_follower.launch.py
pipeline_follower_sim/src/: pipeline_follower_node.cpp
ransac_line_fitter_cpp/: CMakeLists.txt  package.xml
ransac_line_fitter_cpp/launch/: ransac_line.launch.py
ransac_line_fitter_cpp/src/: ransac_line_node.cpp
scripts/: bashrc_extra.sh  import_dependencies.sh
vcstool/: README.md  dependencies.repos
vortex_locate_pipeline/: CMakeLists.txt  package.xml
vortex_locate_pipeline/config/: pipeline_locator_params.yaml
vortex_locate_pipeline/include/vortex_locate_pipeline/: locator.hpp  locator_core.hpp
vortex_locate_pipeline/launch/: pipeline_locator.launch.py
vortex_locate_pipeline/src/core/: locator_core.cpp
vortex_locate_pipeline/src/ros/: locate_pipeline_node.cpp  locator.cpp
vortex_pipeline_3d/: CMakeLists.txt  package.xml
vortex_pipeline_3d/config/: localizer_params.yaml
vortex_pipeline_3d/include/vortex_pipeline_3d/: geometry.hpp  localizer_node.hpp
vortex_pipeline_3d/include/vortex_pipeline_3d/visualization/: image_overlay.hpp  marker_publisher.hpp
vortex_pipeline_3d/launch/: localizer.launch.py
vortex_pipeline_3d/src/: localizer_node_main.cpp
vortex_pipeline_3d/src/core/: geometry.cpp
vortex_pipeline_3d/src/ros/: localizer_node.cpp
vortex_pipeline_3d/src/visualization/: image_overlay.cpp  marker_publisher.cpp
vortex_pipeline_endpoints/: CMakeLists.txt  package.xml
vortex_pipeline_endpoints/config/: detector_params.yaml
vortex_pipeline_endpoints/include/vortex_pipeline_endpoints/: detector.hpp  detector_node.hpp
vortex_pipeline_endpoints/launch/: detector.launch.py
vortex_pipeline_endpoints/src/: detector_node_main.cpp
vortex_pipeline_endpoints/src/core/: detector.cpp  lowest_pixel.cpp
vortex_pipeline_endpoints/src/ros/: detector_node.cpp
