<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pipeline_filtering</name>
  <version>0.0.1</version>
  <description>The pipeline filtering package</description>
  <maintainer email="simonedn@stud.ntnu.no">Simon Edna</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
