<package format="3">
  <name>pipeline_line_fitting</name>
  <version>0.2.0</version>
  <description>ROS2 Line Fitting Package</description>
  <maintainer email="felicic@stud.ntnu.no">Felicia Creutzig</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
