<?xml version="1.0"?>
<package format="3">
  <name>ransac_line_fitter_cpp</name>
  <version>0.1.0</version>
  <description>ROS 2 node that fits a line over a white segmented mask using RANSAC and OpenCV (C++).</description>

  <maintainer email="you@example.com">You</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opencv</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>